[tool.poetry]
name = "upscaler"
version = "0.1.0"
description = ""
authors = ["Yuta Imamura"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transformers = "^4.31.0"
diffusers = "^0.19.3"
k-diffusion = "0.0.15"
torch = "2.0.0"
huggingface-hub = {git = "https://github.com/huggingface/huggingface_hub.git"}
omegaconf = "^2.3.0"
numpy = "^1.25.2"
pytorch-lightning = "^2.0.6"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
blue = "^0.9.1"
taskipy = "^1.12.0"

[tool.taskipy.tasks]
format = "blue main.py && isort main.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
