[tool.poetry]
name = "upscaler"
version = "1.0.0"
description = "Task2 for the Stability.ai interview"
authors = ["Yuta Imamura <yuimam@amazon.co.jp>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transformers = "^4.31.0"
diffusers = "^0.19.3"
k-diffusion = "0.0.15"
torch = "2.0.0"
numpy = "^1.25.2"
pytorch-lightning = "^2.0.6"
pillow = "^10.0.0"
click = "^8.1.7"
requests = "^2.31.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
blue = "^0.9.1"
taskipy = "^1.12.0"

[tool.taskipy.tasks]
format = "blue . && isort ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
